@@ -357,15 +357,15 @@ __endasm;
 // This macro is invalid for the standard C preprocessor, since it
 // includes a hash character in the expansion, hence the SDCC specific
 // pragma.
-#pragma sdcc_hash +
+#define HASH
 #define ROMCALL(x) \
-        mov     R6_B3, #(x & 0xff)              \
-        mov     R7_B3, #((x >> 8) & 0xff)       \
+        mov     R6_B3, HASH(x & 0xff)              \
+        mov     R7_B3, HASH((x >> 8) & 0xff)       \
         lcall   __romcall
 
 #define ROMREDIRECT(x) \
-        mov     R6_B3, #(x & 0xff)              \
-        mov     R7_B3, #((x >> 8) & 0xff)       \
+        mov     R6_B3, HASH(x & 0xff)              \
+        mov     R7_B3, HASH((x >> 8) & 0xff)       \
         lcall   __romredirect
 
 
